--- a/config.yml
+++ b/config.yml
@@ -13,7 +13,7 @@ social:
   github: devonanirudh # Your username on github 
   linkedin: danirudh # go to linkedin and go to your profile, your name will be at the end of the url i.e. www.linkedin.com/in/<name>
   url: https://cv.devonanirudh.com # The URL the site will be hosted on (used by resume)
-examples: true # If you want to include the example.md files in your final build (good for developing new themes)
+examples: false # If you want to include the example.md files in your final build (good for developing new themes)
 theme: dimension # The theme you want to use for your site
 ua_code: UA-000000-0 # The UA code for google analytics
 resume: true # Whether to generate the resume page or not
